fullscreen and animations

--- a/hypr/hardware.conf
+++ b/hypr/hardware.conf
@@ -22,3 +22,9 @@ input {
 bindl=,switch:off:Lid Switch,exec,~/bin/hyprlid open
 # Lid is closed
 bindl=,switch:on:Lid Switch,exec,~/bin/hyprlid close
+
+# Example per-device config
+# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
+#device:epic-mouse-v1 {
+    #sensitivity = -0.5
+#}
