--- a/hypr/workspaces.conf
+++ b/hypr/workspaces.conf
@@ -7,7 +7,8 @@ $menu = rofi -combi-modi drun,window -theme solarized -font 'Inconsolata Nerd Fo
 bind = $mainMod, D, exec, $menu
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, F, togglefloating,
+bind = $mainMod, F, fullscreen
+bind = $mainMod SHIFT, F, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
