--- a/hypr/ui.conf
+++ b/hypr/ui.conf
@@ -31,7 +31,7 @@ decoration {
 }
 
 animations {
-    enabled = no
+    enabled = yes
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -65,9 +65,3 @@ misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
 }
-
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-#device:epic-mouse-v1 {
-    #sensitivity = -0.5
-#}
