--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -66,7 +66,7 @@ bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-cop
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 windowrulev2 = workspace 1, class:Alacritty
-windowrulev2 = workspace 1, class:google-chrome
+# windowrulev2 = workspace 1, class:google-chrome
 windowrulev2 = workspace 3, class:obsidian
 windowrulev2 = workspace 4, class:Slack
 windowrulev2 = float, class:qalculate-gtk
@@ -86,6 +86,6 @@ exec-once = blueman-applet
 #exec-once = qalculate-gtk
 exec-once = dropbox
 exec-once = solaar --window=hide
-exec-once = udiskie &
+# exec-once = udiskie &
 exec-once = mako
 #exec-once = /usr/lib/polkit-kde-authentication-agent-1
