--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,15 +12,15 @@ workspace = 3, monitor:$h27, default:true, persistent:true
 workspace = 4, monitor:$h27, persistent:true
 
 # work
-$w1 = desc:Dell Inc. DELL P2415Q D8VXF7AA0TUB
-$w2 = desc:Dell Inc. DELL P2415Q D8VXF79M0FVL
-monitor = $w1, highres, 1920x0, 1
-monitor = $w2, highres, 5760x0, 1
-
-workspace = 1, monitor:$w1, default:true, persistent:true
-workspace = 2, monitor:$w1, persistent:true
-workspace = 3, monitor:$w2, default:true, persistent:true
-workspace = 4, monitor:$w2, persistent:true
+# $w1 = desc:Dell Inc. DELL P2415Q D8VXF7AA0TUB
+# $w2 = desc:Dell Inc. DELL P2415Q D8VXF79M0FVL
+# monitor = $w1, highres, 1920x0, 1
+# monitor = $w2, highres, 5760x0, 1
+#
+# workspace = 1, monitor:$w1, default:true, persistent:true
+# workspace = 2, monitor:$w1, persistent:true
+# workspace = 3, monitor:$w2, default:true, persistent:true
+# workspace = 4, monitor:$w2, persistent:true
 
 # env vars.
 env = XCURSOR_SIZE,24
@@ -70,15 +70,17 @@ windowrulev2 = workspace 1, class:Alacritty
 windowrulev2 = workspace 3, class:obsidian
 windowrulev2 = workspace 4, class:Slack
 windowrulev2 = float, class:qalculate-gtk
+windowrulev2 = float, class:bitwarden
 
 # Start programs
 exec-once = alacritty --command tmux
-exec-once = google-chrome-stable --profile-directory=Default
+# exec-once = google-chrome-stable --profile-directory=Default
+exec-once = brave --profile-directory=Default
 exec-once = obsidian
 exec-once = slack
 
 # Background apps
-exec-once = waybar -c ~/.config/waybar/config_hypr
+exec-once = waybar -c ~/.config/waybar/config
 #exec-once = hyprpaper
 exec-once = hypridle
 exec-once = nm-applet --indicator
@@ -86,6 +88,3 @@ exec-once = blueman-applet
 #exec-once = qalculate-gtk
 exec-once = dropbox
 exec-once = solaar --window=hide
-# exec-once = udiskie &
-exec-once = mako
-#exec-once = /usr/lib/polkit-kde-authentication-agent-1
