--- a/hypr/media-keys.conf
+++ b/hypr/media-keys.conf
@@ -8,8 +8,9 @@ bind = $mainMod, Return, exec, playerctl play-pause
 bind = $mainMod, Right, exec, playerctl next
 bind = $mainMod, Left, exec, playerctl previous
 
-bind = , XF86MonBrightnessUp, exec, brightnessctl s +$volStep
-bind = , XF86MonBrightnessDown, exec, brightnessctl s $volStep-
+bind = , XF86MonBrightnessUp, exec, brightnessctl s +10%
+bind = , XF86MonBrightnessDown, exec, brightnessctl s 10%-
+
 bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +$volStep
 bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -$volStep
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
