--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,15 +12,14 @@ workspace = 3, monitor:$h27, default:true, persistent:true
 workspace = 4, monitor:$h27, persistent:true
 
 # work
-# $w1 = desc:Dell Inc. DELL P2415Q D8VXF7AA0TUB
-# $w2 = desc:Dell Inc. DELL P2415Q D8VXF79M0FVL
-# monitor = $w1, highres, 1920x0, 1
-# monitor = $w2, highres, 5760x0, 1
-#
-# workspace = 1, monitor:$w1, default:true, persistent:true
-# workspace = 2, monitor:$w1, persistent:true
-# workspace = 3, monitor:$w2, default:true, persistent:true
-# workspace = 4, monitor:$w2, persistent:true
+$w1 = desc:Dell Inc. DELL P2415Q D8VXF7AA0TUB
+$w2 = desc:Dell Inc. DELL P2415Q D8VXF79M0FVL
+monitor = $w1, highres, 1920x0, 1
+monitor = $w2, highres, 5760x0, 1
+
+workspace = 1, monitor:$w1, default:true, persistent:true
+workspace = 2, monitor:$w1, persistent:true
+workspace = 3, monitor:$w2, default:true, persistent:true
 
 # env vars.
 env = XCURSOR_SIZE,24
@@ -75,7 +74,7 @@ windowrulev2 = float, class:bitwarden
 # Start programs
 exec-once = alacritty --command tmux
 # exec-once = google-chrome-stable --profile-directory=Default
-exec-once = brave --profile-directory=Default
+exec-once = brave
 exec-once = obsidian
 exec-once = slack
 
