--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,7 +1,6 @@
 # home
 $h32 = desc:Dell Inc. DELL U3223QE JVRK1H3
 $h27 = desc:Dell Inc. DELL S2722QC H9BQLD3
-
 monitor = eDP-1, highres, 0x0, 1
 monitor = $h32, highres, 1920x0, 1
 monitor = $h27, highres, 5760x0, 1
@@ -11,29 +10,16 @@ workspace = 2, monitor:$h32, persistent:true
 workspace = 3, monitor:$h27, default:true, persistent:true
 workspace = 4, monitor:$h27, persistent:true
 
-# work
-$w1 = desc:Dell Inc. DELL P2415Q D8VXF7AA0TUB
-$w2 = desc:Dell Inc. DELL P2415Q D8VXF79M0FVL
-monitor = $w1, highres, 1920x0, 1
-monitor = $w2, highres, 5760x0, 1
-
-workspace = 1, monitor:$w1, default:true, persistent:true
-workspace = 2, monitor:$w1, persistent:true
-workspace = 3, monitor:$w2, default:true, persistent:true
-
-# env vars.
-env = XCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
-
+source = ~/.config/hypr/env.conf
 source = ~/.config/hypr/ui.conf
 source = ~/.config/hypr/hardware.conf
 source = ~/.config/hypr/workspaces.conf
 source = ~/.config/hypr/media-keys.conf
+source = ~/.config/hypr/local.conf
 
 # Keybindings
 $mainMod = SUPER
 
-# Set programs that you use
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Q, killactive,
 
@@ -63,9 +49,8 @@ bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-cop
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = workspace 1, class:Alacritty
-# windowrulev2 = workspace 1, class:google-chrome
 windowrulev2 = workspace 3, class:obsidian
 windowrulev2 = workspace 4, class:Slack
 windowrulev2 = float, class:qalculate-gtk
@@ -74,9 +59,7 @@ windowrulev2 = float, class:bitwarden
 # Start programs
 exec-once = alacritty --command tmux
 # exec-once = google-chrome-stable --profile-directory=Default
-exec-once = brave
 exec-once = obsidian
-exec-once = slack
 
 # Background apps
 exec-once = waybar -c ~/.config/waybar/config
