--- a/tmux.conf
+++ b/tmux.conf
@@ -1,16 +1,3 @@
-# TMUX plugin manager
-set -g @tpm_plugins "            \
-  tmux-plugins/tpm               \
-  tmux-plugins/tmux-resurrect    \
-  tmux-plugins/tmux-continuum    \
-  tmux-plugins/tmux-sensible     \
-  christoomey/vim-tmux-navigator \
-  tmux-plugins/tmux-yank         \
-  niksingh710/minimal-tmux-status
-"
-
-set -g @continuum-restore 'on'
-run-shell ~/.tmux/plugins/tpm/tpm
 
 # sort alphabetically
 bind s choose-tree -swZ -O name
@@ -32,7 +19,7 @@ set -g prefix C-a
 unbind C-b
 
 # Ensure that we can send Ctrl-A to other apps
-bind C-a send-prefix
+# bind C-a send-prefix
 
 # Set the base index for windows and panes to 1 instead of 0
 set -g base-index 1
@@ -54,17 +41,26 @@ bind -r L resize-pane -R 10
 # Mouse support - set to on if you want to use the mouse
 set -g mouse on
 
-# Clipboard on linux
-# if-shell "uname -a | grep Linux" \
-#   'set-option -s set-clipboard off' \
-#   'bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"'
-
 # Renumber windows when a window is closed
 set-option -g renumber-windows on
 
 # Enable vi keys.
 setw -g mode-keys vi
 
-bind r source-file ~/.tmux.conf \;# display-message "Config reloaded..."
+# bind r source-file ~/.tmux.conf \;# display-message "Config reloaded..."
+# set -sg escape-time 0
 
-set -sg escape-time 0
+# TMUX plugin manager
+set -g @tpm_plugins "            \
+  tmux-plugins/tpm               \
+  tmux-plugins/tmux-sensible     \
+  christoomey/vim-tmux-navigator \
+  tmux-plugins/tmux-yank         \
+  niksingh710/minimal-tmux-status
+"
+# disabled:
+# tmux-plugins/tmux-continuum
+# tmux-plugins/tmux-resurrect
+# set -g @continuum-restore 'on'
+
+run-shell ~/.tmux/plugins/tpm/tpm
