--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -68,5 +68,5 @@ exec-once = hypridle
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
 #exec-once = qalculate-gtk
-exec-once = dropbox
+# exec-once = dropbox
 exec-once = solaar --window=hide
