--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -38,7 +38,7 @@ input-field {
 # TIME
 label {
     monitor =
-    text = cmd[update:1000] echo "$(date +"%-I:%M%p")"
+    text = cmd[update:1000] echo "$(date +"%H:%M")"
     color = white
     #color = rgba(255, 255, 255, 0.6)
     font_size = 120
