--- a/tmux.conf
+++ b/tmux.conf
@@ -56,11 +56,10 @@ set -g @tpm_plugins "            \
   tmux-plugins/tmux-sensible     \
   christoomey/vim-tmux-navigator \
   tmux-plugins/tmux-yank         \
+  tmux-plugins/tmux-continuum    \
+  tmux-plugins/tmux-resurrect    \
   niksingh710/minimal-tmux-status
 "
-# disabled:
-# tmux-plugins/tmux-continuum
-# tmux-plugins/tmux-resurrect
-# set -g @continuum-restore 'on'
+set -g @continuum-restore 'on'
 
 run-shell ~/.tmux/plugins/tpm/tpm
