--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -55,6 +55,7 @@ windowrulev2 = workspace 3, class:obsidian
 windowrulev2 = workspace 4, class:Slack
 windowrulev2 = float, class:qalculate-gtk
 windowrulev2 = float, class:bitwarden
+windowrulev2 = workspace 10, title:Espanso Sync Tool
 
 # Start programs
 exec-once = alacritty --command tmux
