--- a/.stversions/hypr/hyprland~20240504-124857.conf
+++ b/.stversions/hypr/hyprland~20240504-124857.conf
@@ -24,8 +24,8 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Q, killactive,
 
 bind = $mainMod, HOME, exec, hyprlock
-bind = $mainMod SHIFT, END, exec, wlogout
-bind = $mainMod, END, exec, hyprlock
+bind = $mainMod SHIFT, End, exit,
+bind = $mainMod, END, exec, systemctl suspend
 
 bind = $mainMod, E, exec, alacritty
 bind = $mainMod, C, exec, qalculate-gtk
@@ -63,7 +63,7 @@ exec-once = alacritty --command tmux
 exec-once = obsidian
 
 # Background apps
-exec-once = waybar -c ~/.config/waybar/config.jsonc
+exec-once = waybar -c ~/.config/waybar/config
 #exec-once = hyprpaper
 exec-once = hypridle
 exec-once = nm-applet --indicator
