--- a/.stversions/hypr/hyprland~20240419-204927.conf
+++ b/.stversions/hypr/hyprland~20240419-204927.conf
@@ -24,8 +24,8 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Q, killactive,
 
 bind = $mainMod, HOME, exec, hyprlock
-bind = $mainMod SHIFT, END, exec, wlogout
-bind = $mainMod, END, exec, hyprlock
+bind = $mainMod SHIFT, End, exit,
+bind = $mainMod, END, exec, systemctl suspend
 
 bind = $mainMod, E, exec, alacritty
 bind = $mainMod, C, exec, qalculate-gtk
@@ -55,7 +55,6 @@ windowrulev2 = workspace 3, class:obsidian
 windowrulev2 = workspace 4, class:Slack
 windowrulev2 = float, class:qalculate-gtk
 windowrulev2 = float, class:bitwarden
-windowrulev2 = workspace 10, title:Espanso Sync Tool
 
 # Start programs
 exec-once = alacritty --command tmux
@@ -63,7 +62,7 @@ exec-once = alacritty --command tmux
 exec-once = obsidian
 
 # Background apps
-exec-once = waybar -c ~/.config/waybar/config.jsonc
+exec-once = waybar -c ~/.config/waybar/config
 #exec-once = hyprpaper
 exec-once = hypridle
 exec-once = nm-applet --indicator
