--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -7,7 +7,7 @@
     // Choose the order of the modules
     "modules-left": ["hyprland/workspaces"],
     "modules-center": ["hyprland/window"],
-      "modules-right": ["idle_inhibitor", "pulseaudio", "network", "cpu", "memory", "temperature", "battery", "clock", "hyprland/language", "tray"],
+      "modules-right": ["idle_inhibitor", "pulseaudio", "network#speed", "cpu", "memory", "temperature", "battery", "hyprland/language", "clock", "tray"],
     // Modules configuration
     "hyprland/workspaces": {
        "format": "{icon}",
