stuffs from work

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,14 +1,16 @@
-# home
-$h32 = desc:Dell Inc. DELL U3223QE JVRK1H3
-$h27 = desc:Dell Inc. DELL S2722QC H9BQLD3
 monitor = eDP-1, highres, 0x0, 1
-monitor = $h32, highres, 1920x0, 1
-monitor = $h27, highres, 5760x0, 1
+# monitor = eDP-1, disable
 
-workspace = 1, monitor:$h32, default:true, persistent:true
-workspace = 2, monitor:$h32, persistent:true
-workspace = 3, monitor:$h27, default:true, persistent:true
-workspace = 4, monitor:$h27, persistent:true
+# home
+# $h32 = desc:Dell Inc. DELL U3223QE JVRK1H3
+# $h27 = desc:Dell Inc. DELL S2722QC H9BQLD3
+# monitor = $h32, highres, 1920x0, 1
+# monitor = $h27, highres, 5760x0, 1
+#
+# workspace = 1, monitor:$h32, default:true, persistent:true
+# workspace = 2, monitor:$h32, persistent:true
+# workspace = 3, monitor:$h27, default:true, persistent:true
+# workspace = 4, monitor:$h27, persistent:true
 
 source = ~/.config/hypr/env.conf
 source = ~/.config/hypr/ui.conf
@@ -24,10 +26,11 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Q, killactive,
 
 bind = $mainMod, HOME, exec, hyprlock
-bind = $mainMod SHIFT, END, exec, wlogout
-bind = $mainMod, END, exec, hyprlock
+bind = $mainMod SHIFT, END, exec, systemctl suspend
+bind = $mainMod, END, exec, wlogout
+bind = $mainMod, E, exec, togglegroup
 
-bind = $mainMod, E, exec, alacritty
+# bind = $mainMod, E, exec, alacritty
 bind = $mainMod, C, exec, qalculate-gtk
 bind = $mainMod, N, exec, thunar
 
@@ -44,18 +47,13 @@ bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | 
 bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 # Window rules
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = workspace 1, class:Alacritty
 windowrulev2 = workspace 3, class:obsidian
 windowrulev2 = workspace 4, class:Slack
+windowrulev2 = workspace 10, title:Espanso Sync Tool
 windowrulev2 = float, class:qalculate-gtk
 windowrulev2 = float, class:bitwarden
-windowrulev2 = workspace 10, title:Espanso Sync Tool
 
 # Start programs
 exec-once = alacritty --command tmux
