--- a/hypr/ui.conf
+++ b/hypr/ui.conf
@@ -31,7 +31,7 @@ decoration {
 }
 
 animations {
-    enabled = yes
+    enabled = no
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
