--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,15 +2,15 @@ monitor = eDP-1, highres, 0x0, 1
 # monitor = eDP-1, disable
 
 # home
-# $h32 = desc:Dell Inc. DELL U3223QE JVRK1H3
-# $h27 = desc:Dell Inc. DELL S2722QC H9BQLD3
-# monitor = $h32, highres, 1920x0, 1
-# monitor = $h27, highres, 5760x0, 1
-#
-# workspace = 1, monitor:$h32, default:true, persistent:true
-# workspace = 2, monitor:$h32, persistent:true
-# workspace = 3, monitor:$h27, default:true, persistent:true
-# workspace = 4, monitor:$h27, persistent:true
+$h32 = desc:Dell Inc. DELL U3223QE JVRK1H3
+$h27 = desc:Dell Inc. DELL S2722QC H9BQLD3
+monitor = $h32, highres, 1920x0, 1
+monitor = $h27, highres, 5760x0, 1
+
+workspace = 1, monitor:$h32, default:true, persistent:true
+workspace = 2, monitor:$h32, persistent:true
+workspace = 3, monitor:$h27, default:true, persistent:true
+workspace = 4, monitor:$h27, persistent:true
 
 source = ~/.config/hypr/env.conf
 source = ~/.config/hypr/ui.conf
@@ -30,7 +30,7 @@ bind = $mainMod, END, exec, wlogout
 bind = $mainMod SHIFT, END, exec, systemctl suspend
 bind = $mainMod, E, exec, togglegroup
 
-# bind = $mainMod, E, exec, alacritty
+# bind = $mainMod, E, exec, foot
 bind = $mainMod, C, exec, qalculate-gtk
 bind = $mainMod, N, exec, thunar
 
@@ -48,7 +48,7 @@ bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-cop
 
 # Window rules
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrulev2 = workspace 1, class:Alacritty
+windowrulev2 = workspace 1, class:Foot
 windowrulev2 = workspace 3, class:obsidian
 windowrulev2 = workspace 4, class:Slack
 windowrulev2 = workspace 10, title:Espanso Sync Tool
@@ -56,7 +56,7 @@ windowrulev2 = float, class:qalculate-gtk
 windowrulev2 = float, class:bitwarden
 
 # Start programs
-exec-once = alacritty --command tmux
+exec-once = foot tmux
 # exec-once = google-chrome-stable --profile-directory=Default
 exec-once = obsidian
 
