resize with arrow keys

--- a/hypr/workspaces.conf
+++ b/hypr/workspaces.conf
@@ -60,3 +60,7 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+bind = $mainMod SHIFT, right, resizeactive, 20 0
+bind = $mainMod SHIFT, left, resizeactive, -20 0
+bind = $mainMod SHIFT, up, resizeactive, 0 -20
+bind = $mainMod SHIFT, down, resizeactive, 0 20
