--- a/hypr/workspaces.conf
+++ b/hypr/workspaces.conf
@@ -13,10 +13,10 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+# bind = $mainMod, left, movefocus, l
+# bind = $mainMod, right, movefocus, r
+# bind = $mainMod, up, movefocus, u
+# bind = $mainMod, down, movefocus, d
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
@@ -60,7 +60,7 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-bind = $mainMod SHIFT, right, resizeactive, 20 0
-bind = $mainMod SHIFT, left, resizeactive, -20 0
-bind = $mainMod SHIFT, up, resizeactive, 0 -20
-bind = $mainMod SHIFT, down, resizeactive, 0 20
+bind = $mainMod SHIFT, right, resizeactive, 25 0
+bind = $mainMod SHIFT, left, resizeactive, -25 0
+bind = $mainMod SHIFT, up, resizeactive, 0 -25
+bind = $mainMod SHIFT, down, resizeactive, 0 25
