--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -4,13 +4,14 @@ general {
     after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
 }
 
+# set monitor backlight to minimum when idle for 10min
 listener {
-    timeout = 300                                # 5min
+    timeout = 600                                # 10min
     on-timeout = brightnessctl -s set 10         # set monitor backlight to minimum, avoid 0 on OLED monitor.
     on-resume = brightnessctl -r                 # monitor backlight restor.
 }
 
-# turn off keyboard backlight, comment out this section if you dont have a keyboard backlight.
+# turn off keyboard backlight
 listener {
     timeout = 300                                          # 5min
     on-timeout = brightnessctl -sd rgb:kbd_backlight set 0 # turn off keyboard backlight.
@@ -18,12 +19,12 @@ listener {
 }
 
 listener {
-    timeout = 600                                 # 10min
+    timeout = 900                                 # 15min
     on-timeout = loginctl lock-session            # lock screen when timeout has passed
 }
 
 listener {
-    timeout = 900                                 # 15min
+    timeout = 1200                                 # 20min
     on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
     on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
 }
