--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,12 +5,12 @@ monitor = eDP-1, highres, 0x0, 1
 $h32 = desc:Dell Inc. DELL U3223QE JVRK1H3
 $h27 = desc:Dell Inc. DELL S2722QC H9BQLD3
 monitor = $h32, highres, 1920x0, 1
-monitor = $h27, 3840x2160@60Hz, 5760x0, 1
+monitor = $h27, 3840x2160@30Hz, 5760x0, 1
 
-# workspace = 1, monitor:$h32, default:true, persistent:true
-# workspace = 2, monitor:$h32, persistent:true
-# workspace = 3, monitor:$h27, default:true, persistent:true
-# workspace = 4, monitor:$h27, persistent:true
+workspace = 1, monitor:$h32, default:true, persistent:true
+workspace = 2, monitor:$h32, persistent:true
+workspace = 3, monitor:$h27, default:true, persistent:true
+workspace = 4, monitor:$h27, persistent:true
 
 source = ~/.config/hypr/env.conf
 source = ~/.config/hypr/ui.conf
