--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -7,10 +7,10 @@ $h27 = desc:Dell Inc. DELL S2722QC H9BQLD3
 monitor = $h32, highres, 1920x0, 1
 monitor = $h27, 3840x2160@30Hz, 5760x0, 1
 
-workspace = 1, monitor:$h32, default:true, persistent:true
-workspace = 2, monitor:$h32, persistent:true
-workspace = 3, monitor:$h27, default:true, persistent:true
-workspace = 4, monitor:$h27, persistent:true
+# workspace = 1, monitor:$h32, default:true, persistent:true
+# workspace = 2, monitor:$h32, persistent:true
+# workspace = 3, monitor:$h27, default:true, persistent:true
+# workspace = 4, monitor:$h27, persistent:true
 
 source = ~/.config/hypr/env.conf
 source = ~/.config/hypr/ui.conf
@@ -57,7 +57,7 @@ windowrulev2 = float, class:qalculate-gtk
 windowrulev2 = float, class:bitwarden
 
 # Start programs
-exec-once = foot tmux
+exec-once = alacritty --command tmux
 # exec-once = google-chrome-stable --profile-directory=Default
 exec-once = obsidian
 
