--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
-preload = /home/jesper/Pictures/wallpapers/arch-nord-dark.png
+preload = /home/jesper/Pictures/wallpapers/074_D6zgYd9.jpg
 
-wallpaper = ,/home/jesper/Pictures/wallpapers/arch-nord-dark.png
+wallpaper = ,/home/jesper/Pictures/wallpapers/074_D6zgYd9.jpg
 
 ipc = off
