assign apps to workspaces on boot

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,12 +5,12 @@ monitor = eDP-1, highres, 0x0, 1
 $h32 = desc:Dell Inc. DELL U3223QE JVRK1H3
 $h27 = desc:Dell Inc. DELL S2722QC H9BQLD3
 monitor = $h32, highres, 1920x0, 1
-monitor = $h27, 3840x2160@30Hz, 5760x0, 1
+monitor = $h27, 3840x2160@60Hz, 5760x0, 1
 
-# workspace = 1, monitor:$h32, default:true, persistent:true
-# workspace = 2, monitor:$h32, persistent:true
-# workspace = 3, monitor:$h27, default:true, persistent:true
-# workspace = 4, monitor:$h27, persistent:true
+workspace = 1, monitor:$h32, default:true, persistent:true
+workspace = 2, monitor:$h32, persistent:true
+workspace = 3, monitor:$h27, default:true, persistent:true
+workspace = 4, monitor:$h27, persistent:true
 
 source = ~/.config/hypr/env.conf
 source = ~/.config/hypr/ui.conf
@@ -48,7 +48,7 @@ bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | 
 bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 # Window rules
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = workspace 1, class:Foot
 windowrulev2 = workspace 3, class:obsidian
 windowrulev2 = workspace 4, class:Slack
@@ -57,9 +57,9 @@ windowrulev2 = float, class:qalculate-gtk
 windowrulev2 = float, class:bitwarden
 
 # Start programs
-exec-once = alacritty --command tmux
+exec-once = [workspace 1 silent] alacritty --command tmux
 # exec-once = google-chrome-stable --profile-directory=Default
-exec-once = obsidian
+exec-once = [workspace 3 silent] obsidian
 
 # Background apps
 exec-once = waybar -c ~/.config/waybar/config.jsonc
