--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -39,8 +39,8 @@ input-field {
 label {
     monitor =
     text = cmd[update:1000] echo "$(date +"%H:%M")"
-    color = white
-    #color = rgba(255, 255, 255, 0.6)
+    # color = white
+    color = rgba(255, 255, 255, 0.6)
     font_size = 120
     position = 0, -300
     halign = center
