--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -40,6 +40,8 @@ bind = , Print, exec, grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.fo
 # Take a Screenshot with the region select
 bind = $mainMod, X, exec, grim -g "$(slurp)" - | swappy -f -
 
+# Keep the clipboard persistent when apps close
+exec-once = wl-clip-persist --clipboard both
 # Copy/paste
 exec-once = wl-paste --type text --watch cliphist store
 # Stores only image data
