--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -41,7 +41,7 @@ bind = , Print, exec, grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.fo
 bind = $mainMod, X, exec, grim -g "$(slurp)" - | swappy -f -
 
 # Keep the clipboard persistent when apps close
-exec-once = wl-clip-persist --clipboard both
+# exec-once = wl-clip-persist --clipboard both
 # Copy/paste
 exec-once = wl-paste --type text --watch cliphist store
 # Stores only image data
@@ -57,6 +57,8 @@ windowrulev2 = workspace 4, class:Slack
 windowrulev2 = workspace 10, title:Espanso Sync Tool
 windowrulev2 = float, class:qalculate-gtk
 windowrulev2 = float, class:bitwarden
+windowrulev2 = float,class:(copyq)
+windowrulev2 = move onscreen cursor,class:(copyq)
 
 # Start programs
 exec-once = [workspace 1 silent] alacritty --command tmux
