--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -29,7 +29,7 @@
         "spacing": 10
     },
     "clock": {
-        // "timezone": "America/New_York",
+        "timezone": "Europe/Berlin",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
         "format": "{:%H:%M %Y-%m-%d}",
         "format-alt": "{:%Y-%m-%d}"
