--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -7,10 +7,10 @@ $h27 = desc:Dell Inc. DELL S2722QC H9BQLD3
 monitor = $h32, highres, 1920x0, 1
 monitor = $h27, 3840x2160@60Hz, 5760x0, 1
 
-workspace = 1, monitor:$h32, default:true, persistent:true
-workspace = 2, monitor:$h32, persistent:true
-workspace = 3, monitor:$h27, default:true, persistent:true
-workspace = 4, monitor:$h27, persistent:true
+# workspace = 1, monitor:$h32, default:true, persistent:true
+# workspace = 2, monitor:$h32, persistent:true
+# workspace = 3, monitor:$h27, default:true, persistent:true
+# workspace = 4, monitor:$h27, persistent:true
 
 source = ~/.config/hypr/env.conf
 source = ~/.config/hypr/ui.conf
@@ -41,7 +41,7 @@ bind = , Print, exec, grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.fo
 bind = $mainMod, X, exec, grim -g "$(slurp)" - | swappy -f -
 
 # Keep the clipboard persistent when apps close
-# exec-once = wl-clip-persist --clipboard both
+exec-once = wl-clip-persist --clipboard both
 # Copy/paste
 exec-once = wl-paste --type text --watch cliphist store
 # Stores only image data
@@ -51,7 +51,6 @@ bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-cop
 
 # Window rules
 windowrulev2 = suppressevent maximize, class:.*
-windowrulev2 = workspace 1, class:Foot
 windowrulev2 = workspace 3, class:obsidian
 windowrulev2 = workspace 4, class:Slack
 windowrulev2 = workspace 10, title:Espanso Sync Tool
@@ -71,5 +70,4 @@ exec-once = hyprpaper
 exec-once = hypridle
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
-#exec-once = qalculate-gtk
 exec-once = solaar --window=hide
