--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,4 +1,4 @@
-import = [ "~/.config/alacritty/themes/themes/catppuccin_latte.toml" ]
+import = [ "~/.config/alacritty/themes/themes/catppuccin.toml" ]
 
 [bell]
 duration = 0
@@ -7,11 +7,11 @@ duration = 0
 TERM = "xterm-256color"
 
 [font]
-size = 16
+size = 14
 
-[font.normal]
-family = "HackNerdFont"
-style = "Regular"
+# [font.normal]
+# family = "HackNerdFont"
+# style = "Regular"
 
 [selection]
 save_to_clipboard = true
