--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -23,11 +23,11 @@ listener {
     on-timeout = loginctl lock-session            # lock screen when timeout has passed
 }
 
-listener {
-    timeout = 1200                                 # 20min
-    on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
-    on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
-}
+# listener {
+#     timeout = 1200                                 # 20min
+#     on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
+#     on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
+# }
 
 listener {
     timeout = 1800                                # 30min
