--- a/alacritty.toml
+++ b/alacritty.toml
@@ -7,11 +7,11 @@ duration = 0
 TERM = "xterm-256color"
 
 [font]
-size = 14
+size = 16
 
-# [font.normal]
-# family = "HackNerdFont"
-# style = "Regular"
+[font.normal]
+family = "HackNerdFont"
+style = "Regular"
 
 [selection]
 save_to_clipboard = true
