--- a/hypr/hardware.conf
+++ b/hypr/hardware.conf
@@ -19,9 +19,9 @@ input {
 }
 
 # Lid is opened
-bindl=,switch:off:Lid Switch,exec,~/bin/hyprlid open
+# bindl=,switch:off:Lid Switch,exec,~/bin/hyprlid open
 # Lid is closed
-bindl=,switch:on:Lid Switch,exec,~/bin/hyprlid close
+# bindl=,switch:on:Lid Switch,exec,~/bin/hyprlid close
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
