--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -60,7 +60,7 @@ windowrulev2 = float,class:(copyq)
 windowrulev2 = move onscreen cursor,class:(copyq)
 
 # Start programs
-exec-once = [workspace 1 silent] alacritty --command tmux
+exec-once = [workspace 1 silent] alacritty
 # exec-once = google-chrome-stable --profile-directory=Default
 exec-once = [workspace 3 silent] obsidian
 
