--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,8 +1,5 @@
 import = [ "~/.config/alacritty/themes/themes/catppuccin.toml" ]
 
-[bell]
-duration = 0
-
 [env]
 TERM = "xterm-256color"
 
@@ -17,5 +14,9 @@ style = "Regular"
 save_to_clipboard = true
 
 [window]
-decorations = "full"
+decorations = "none"
 dynamic_padding = true
+
+[shell]
+program = "tmux"
+args = ["new-session", "-A", "-s", "general"]
