--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -46,8 +46,8 @@ exec-once = wl-clip-persist --clipboard both
 exec-once = wl-paste --type text --watch cliphist store
 # Stores only image data
 exec-once = wl-paste --type image --watch cliphist store
-bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
-bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+# bind = $mainMod , V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = ALT, v, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 # Window rules
 windowrulev2 = suppressevent maximize, class:.*
