Tmux reload command

--- a/tmux.conf
+++ b/tmux.conf
@@ -46,8 +46,10 @@ set-option -g renumber-windows on
 # Enable vi keys.
 setw -g mode-keys vi
 
-# bind r source-file ~/.tmux.conf \;# display-message "Config reloaded..."
+bind r source-file ~/dotfiles/tmux.conf \;# display-message "Config reloaded"
 # set -sg escape-time 0
+
+set -g set-titles on
 
 # TMUX plugin manager
 set -g @tpm_plugins "            \
