--- a/alacritty.toml
+++ b/alacritty.toml
@@ -3,14 +3,14 @@ general.import = [ "~/.config/alacritty/themes/themes/catppuccin.toml" ]
 [env]
 TERM = "xterm-256color"
 
-# [font.normal]
-# family = "HackNerdFont"
-# style = "Regular"
+[font.normal]
+family = "HackNerdFont"
+style = "Regular"
 
 [font]
-normal = { family = "CaskaydiaMono Nerd Font", style = "Regular" }
-bold = { family = "CaskaydiaMono Nerd Font", style = "Bold" }
-italic = { family = "CaskaydiaMono Nerd Font", style = "Italic" }
+# normal = { family = "CaskaydiaMono Nerd Font", style = "Regular" }
+# bold = { family = "CaskaydiaMono Nerd Font", style = "Bold" }
+# italic = { family = "CaskaydiaMono Nerd Font", style = "Italic" }
 size = 12
 
 [selection]
@@ -19,9 +19,8 @@ save_to_clipboard = true
 [window]
 padding.x = 14
 padding.y = 14
-decorations = "None"
+# decorations = "None"
 opacity = 0.98
-# decorations = "none"
 # dynamic_padding = true
 
 # [terminal.shell]
