--- a/alacritty.toml
+++ b/alacritty.toml
@@ -20,7 +20,7 @@ save_to_clipboard = true
 padding.x = 14
 padding.y = 14
 # decorations = "None"
-opacity = 0.98
+# opacity = 0.99
 # dynamic_padding = true
 
 # [terminal.shell]
