--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,12 +12,12 @@ workspace = 2, monitor:$h32, persistent:true
 workspace = 3, monitor:$h27, default:true, persistent:true
 workspace = 4, monitor:$h27, persistent:true
 
-source = ~/.config/hypr/env.conf
-source = ~/.config/hypr/ui.conf
-source = ~/.config/hypr/hardware.conf
-source = ~/.config/hypr/workspaces.conf
-source = ~/.config/hypr/media-keys.conf
-source = ~/.config/hypr/local.conf
+source = ~/dotfiles/hypr/env.conf
+source = ~/dotfiles/hypr/ui.conf
+source = ~/dotfiles/hypr/hardware.conf
+source = ~/dotfiles/hypr/workspaces.conf
+source = ~/dotfiles/hypr/media-keys.conf
+source = ~/dotfiles/hypr/local.conf
 
 # Keybindings
 $mainMod = SUPER
@@ -53,7 +53,6 @@ bind = ALT, v, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = workspace 3, class:obsidian
 windowrulev2 = workspace 4, class:Slack
-windowrulev2 = workspace 10, title:Espanso Sync Tool
 windowrulev2 = float, class:qalculate-gtk
 windowrulev2 = float, class:bitwarden
 windowrulev2 = float,class:(copyq)
