--- a/alacritty.toml
+++ b/alacritty.toml
@@ -3,14 +3,14 @@ general.import = [ "~/.config/alacritty/themes/themes/catppuccin.toml" ]
 [env]
 TERM = "xterm-256color"
 
-[font.normal]
-family = "HackNerdFont"
-style = "Regular"
+# [font.normal]
+# family = "HackNerdFont"
+# style = "Regular"
 
 [font]
-# normal = { family = "CaskaydiaMono Nerd Font", style = "Regular" }
-# bold = { family = "CaskaydiaMono Nerd Font", style = "Bold" }
-# italic = { family = "CaskaydiaMono Nerd Font", style = "Italic" }
+normal = { family = "CaskaydiaMono Nerd Font", style = "Regular" }
+bold = { family = "CaskaydiaMono Nerd Font", style = "Bold" }
+italic = { family = "CaskaydiaMono Nerd Font", style = "Italic" }
 size = 12
 
 [selection]
@@ -23,8 +23,8 @@ padding.y = 14
 # opacity = 0.99
 # dynamic_padding = true
 
-# [terminal.shell]
-# program = "tmux"
+[terminal.shell]
+program = "tmux"
 # args = ["new-session", "-A", "-s", "general"]
 
 [keyboard]
