--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -53,8 +53,23 @@
   },
   "clock": {
     "format": "{:L%d %b %H:%M}",
-    "tooltip": false,
-    "on-click": "ags -t calendar"
+    "tooltip-format": "<tt><small>{calendar}</small></tt>",
+    "calendar": {
+      "mode"          : "month",
+      "mode-mon-col"  : 3,
+      "weeks-pos"     : "right",
+      "on-scroll"     : 1,
+      "format": {
+        "months":     "<span color='#ffead3'><b>{}</b></span>",
+        "days":       "<span color='#ecc6d9'><b>{}</b></span>",
+        "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
+        "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
+        "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
+      }
+    },
+    "actions":  {
+      "on-click-right": "mode",
+    }
   },
   "battery": {
     "format": "{capacity}% {icon}",
