--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -3,7 +3,7 @@
   "layer": "top",
   "position": "top",
   "spacing": 10,
-  "height": 26,
+  // "height": 26,
   // "modules-left": ["niri/workspaces", "wlr/taskbar"],
   "modules-left": ["niri/workspaces"],
   "modules-center": ["niri/window"],
