--- a/tmux.conf
+++ b/tmux.conf
@@ -43,6 +43,10 @@ set -g mouse on
 # Renumber windows when a window is closed
 set-option -g renumber-windows on
 
+# Automatically rename windows to current directory
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
+
 # Enable vi keys.
 setw -g mode-keys vi
 
