--- a/ghostty/config
+++ b/ghostty/config
@@ -53,3 +53,4 @@ font-family = CaskaydiaMono NF Regular
 font-size = 12
 keybind = performable:ctrl+c=copy_to_clipboard
 copy-on-select = clipboard
+mouse-scroll-multiplier = 0.50
