--- a/ghostty/config
+++ b/ghostty/config
@@ -54,3 +54,4 @@ font-size = 12
 keybind = performable:ctrl+c=copy_to_clipboard
 copy-on-select = clipboard
 mouse-scroll-multiplier = 0.50
+app-notifications=no-clipboard-copy
